Added check to prevent crash when subtitle() == nullptr.

Bug: 897957
Change-Id: I2a40aa56067b2567ace74884cf62898e8c87f883
Reviewed-on: https://chromium-review.googlesource.com/c/1297631
Commit-Queue: John Williams <jrw@chromium.org>
Reviewed-by: Takumi Fujimoto <takumif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603273}
Former-commit-id: d01500795bf0bb1e99acd9a9274d1521d05098c6